Remove trailing slash + OpenAPI cleanup
